--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: "GitHub Pages"
+name: "Build"
 
 on:
   workflow_dispatch:
@@ -24,6 +24,7 @@ jobs:
       - name: "Build"
         run: |
           python -m pip install -U pip
+          python -m pip install -U build
           python -m build
 
       - name: "Debug"
