--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,16 +27,8 @@ jobs:
           python -m pip install -U build
           python -m build
 
-      - name: "Debug"
-        run: |
-          echo ----------
-          ls -a
-          echo ----------
-          ls -laH dist/
-          echo ----------
-
-#      - name: "Upload Artifact"
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: vultr-python
-#          path: build/
+      - name: "Upload Artifact"
+        uses: actions/upload-artifact@v3
+        with:
+          name: vultr-python
+          path: dist/
