--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -25,18 +25,19 @@ jobs:
       - name: "Build Docs"
         run: |
           python -m pip install -U pip
+          python -m pip install -U pdoc
           python -m pdoc -o _site vultr.py
 
       - name: "Update Permissions"
         run: |
-          chmod -c -R +rX "build/" | while read line; do
+          chmod -c -R +rX "_site/" | while read line; do
             echo "::warning title=Invalid file permissions automatically fixed::$line"
           done
 
       - name: "Upload Pages Artifact"
         uses: actions/upload-pages-artifact@v2
         with:
-          path: build/
+          path: _site/
 
   deploy:
     name: "Deploy"
