--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m pip install -U pip
           python -m pip install -U pdoc
+          python -m pip install -Ur requirements.txt
           python -m pdoc -o _site vultr.py
 
       - name: "Update Permissions"
