Update Docs and Build

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,11 +1,12 @@
 name: "GitHub Pages"
 
 on:
+  push:
+    branches: ["master"]
   workflow_dispatch:
   repository_dispatch:
     types:
       - webhook
-  push:
 
 jobs:
   build:
