--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -18,12 +18,11 @@ jobs:
     name: "Build"
     if: ${{ !contains(github.event.head_commit.message, '#nopreview') }}
     uses: ./.github/workflows/docs.yaml
+    secrets: inherit
     permissions:
       contents: read
     with:
       name: artifact
-    secrets:
-      webhook: ${{ secrets.DISCORD_WEBHOOK }}
 
   deploy:
     name: "Deploy"
