--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches-ignore: [master]
     paths:
+      - ".github/workflows/docs.yaml"
       - ".github/workflows/preview.yaml"
       - "docs/**"
       - "src/**"
