--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -13,12 +13,10 @@ on:
 jobs:
   build:
     name: "Build"
-    if: ${{ !contains(github.event.head_commit.message, '#nopreview') }}
     uses: ./.github/workflows/docs.yaml
+    secrets: inherit
     permissions:
       contents: read
-    secrets:
-      webhook: ${{ secrets.DISCORD_WEBHOOK }}
 
   deploy:
     name: "Deploy"
