--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-docs/syntax-highlighting.css linguist-generated
-docs/theme.css linguist-generated
+docs/** linguist-documentation
+docs.ps1 linguist-vendored
+build.ps1 linguist-vendored
