--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Python 3 wrapper for the Vultr API v2.0"
 authors = [{ name="Shane" }]
 readme = "README.md"
 dynamic = ["version"]
-requires-python = ">=3.6"
+requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
@@ -36,6 +36,7 @@ dev = [
     "coverage",
     "isort",
     "mypy",
+    "pytest",
     "requests",
     "ruff",
     "setuptools",
