--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,16 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.06",
-    "Programming Language :: Python :: 3.07",
-    "Programming Language :: Python :: 3.08",
-    "Programming Language :: Python :: 3.09",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
     "Operating System :: OS Independent",
-    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
+    "License :: License :: OSI Approved :: MIT License",
     "Natural Language :: English",
 ]
 license = { text = "MIT" }
