--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
     "Operating System :: OS Independent",
-    "License :: License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
 ]
 license = { text = "MIT" }
@@ -41,6 +41,7 @@ dev = [
     "setuptools",
     "ty",
     "types-requests",
+    "validate-pyproject[all]",
 ]
 
 [project.urls]
