--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -51,11 +51,11 @@ jobs:
         run: |
           python -m pip install -U pip
           python -m pip install -U pdoc
-          python -m pip install -e .
+          #python -m pip install -e .
           python -m pdoc -t docs -o "${{ inputs.path }}" \
             --logo "${{ env.logo }}" \
             --logo-link "${{ env.link }}" \
-            vultr
+            src/vultr
 
       - name: "Fix Docs"
         working-directory: ${{ inputs.path }}
