--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,8 +9,14 @@ on:
       - "src/**"
       - "tests/**"
       - "pyproject.toml"
+      - "uv.lock"
   pull_request:
+    branches: [master]
     paths: *paths
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -18,49 +24,40 @@ jobs:
     if: ${{ !contains(github.event.head_commit.message, '#notest') }}
     uses: ./.github/workflows/build.yaml
     with:
-      name: test
-
-    permissions:
-      contents: read
+      version: ""
+      #version-file: ""
 
   test:
-    runs-on: ubuntu-22.04
+    name: "Test"
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 5
     needs: [build]
     strategy:
       fail-fast: false
       matrix:
+        os: ["ubuntu-22.04"]
         version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
-    name: "Test ${{ matrix.version }}"
-
-    permissions:
-      contents: read
 
     steps:
       - name: "Checkout"
         uses: actions/checkout@v6
 
       - name: "Debug event.json"
-        if: ${{ !github.event.act }}
         continue-on-error: true
         run: cat "${GITHUB_EVENT_PATH}"
-
       - name: "Debug CTX github"
-        if: ${{ !github.event.act }}
         continue-on-error: true
         env:
           GITHUB_CTX: ${{ toJSON(github) }}
         run: echo "$GITHUB_CTX"
-
       - name: "Debug Environment"
-        if: ${{ !github.event.act }}
         continue-on-error: true
         run: env
 
       - name: "Download Artifact"
         uses: actions/download-artifact@v6
         with:
-          name: test
+          name: dist
           path: dist
 
       - name: "Setup Python ${{ matrix.version }}"
@@ -75,11 +72,7 @@ jobs:
           python -m pip install -U pip pytest
           python -m pip install dist/*.whl
 
-      #- name: "Debug ${{ matrix.version }}"
-      #  run: |
-      #    ls -lAhR dist/
-
       - name: "Test ${{ matrix.version }}"
-        #continue-on-error: ${{ contains('dev', matrix.version) }}
         run: |
+          source .venv/bin/activate
           pytest -s
