--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,11 @@ __pycache__/
 *.egg-info/
 build/
 dist/
+.*cache/
 *.log
 *.pyc
 .coverage
 coverage.xml
-# Zensical
-site/
-.cache/
 # App
-.secrets
+site/
+output.txt
