--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,6 +39,8 @@ jobs:
       matrix:
         os: ["ubuntu-22.04"]
         version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
+    permissions:
+      contents: read
 
     steps:
       - name: "Checkout"
