--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -50,12 +50,13 @@ jobs:
       - name: "Build Docs"
         run: |
           python -m pip install -U pip
+          python -m pip install --group dev
           python -m pip install -U pdoc
-          python -m pip install -e .
+          #python -m pip install -e .
           python -m pdoc -t docs -o "${{ inputs.path }}" \
             --logo "${{ env.logo }}" \
             --logo-link "${{ env.link }}" \
-            vultr
+            src/vultr
 
       - name: "Fix Docs"
         working-directory: ${{ inputs.path }}
@@ -75,8 +76,8 @@ jobs:
           echo "::group::results"
           echo "${results}"
           echo "::endgroup::"
-          markdown='Artifacts: `${{ inputs.path }}`\n```text\n'"${results}"'\n```'
-          echo -e "${markdown}" >> $GITHUB_STEP_SUMMARY
+          markdown="Artifacts: \`${{ inputs.path }}\`\n\`\`\`text\n${results}\n\`\`\`"
+          echo -e "${markdown}" >> "$GITHUB_STEP_SUMMARY"
 
       - name: "Upload Pages Artifact"
         if: ${{ inputs.name == 'github-pages' }}
