--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
+    "Typing :: Typed",
 ]
 license = { text = "MIT" }
 #license = { file = "LICENSE" }
@@ -39,23 +40,26 @@ dev = [
     "requests",
     "ruff",
     "setuptools",
+    "tombi; python_version>='3.10'",
     "ty",
     "types-requests",
     "validate-pyproject[all]",
+    "watchdog[watchmedo]",
 ]
 
 [project.urls]
-Homepage = "https://cssnr.com/"
-Documentation = "https://cssnr.github.io/vultr-python"
-Source = "https://github.com/cssnr/vultr-python"
+GitHub = "https://github.com/cssnr/vultr-python"
 Issues = "https://github.com/cssnr/vultr-python/issues"
 Changelog = "https://github.com/cssnr/vultr-python/releases"
+Documentation = "https://cssnr.github.io/vultr-python/"
+
+Homepage = "https://cssnr.com/"
 Funding = "https://ko-fi.com/cssnr"
 Discord = "https://discord.gg/wXy6m2X8wY"
 
 # Setup Tools
-#[tool.setuptools.package-data]
-#vultr = ["py.typed"]
+[tool.setuptools.package-data]
+vultr = ["py.typed"]
 [tool.setuptools.dynamic]
 version = { attr = "vultr.version.__version__" }
 
